Refactor IpThrottlingFilter to have configurable requestCount and duration
* Replace colon with underscore for rateLimit cache to prevent Redis from categorize IP address by colon
* Apply filter for #getTemperatures

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,3 +24,6 @@ application:
     servers:
       - redis://localhost:6379
     password: password
+  rate-limit:
+    requestCount: 2
+    durationInSeconds: 1
