--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,28 @@
     <name>Weatherman</name>
     <description>weatherman</description>
     <properties>
+        <!-- Usage:
+            mvn clean install -DskipTests
+            mvn clean install -DskipUnitTests
+            mvn clean install -DskipIntegrationTests
+        -->
+        <skipTests>false</skipTests>
+        <skipUnitTests>${skipTests}</skipUnitTests>
+        <skipIntegrationTests>${skipTests}</skipIntegrationTests>
+
+        <!-- Test report configs -->
+        <testResultDirectory>${project.build.directory}/testResults</testResultDirectory>
+        <unitTestReportDirectory>${testResultDirectory}/unitTests</unitTestReportDirectory>
+        <integrationTestReportDirectory>${testResultDirectory}/integrationTests</integrationTestReportDirectory>
+
         <java.version>11</java.version>
         <springCloudVersion>2021.0.4</springCloudVersion>
         <openFeignVersion>11.10</openFeignVersion>
         <bucket4JSpringBootStarterVersion>0.7.0</bucket4JSpringBootStarterVersion>
         <redissonVersion>3.17.7</redissonVersion>
         <bucket4jVersion>2.1.0</bucket4jVersion>
+        <mavenSurefirePluginVersion>2.22.2</mavenSurefirePluginVersion>
+        <mavenFailsafePluginVersion>2.22.2</mavenFailsafePluginVersion>
     </properties>
 
     <dependencyManagement>
@@ -112,6 +128,61 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+
+            <!-- Configure unit tests. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${mavenSurefirePluginVersion}</version>
+                <configuration>
+                    <!-- Force alphabetical order to have a reproducible build -->
+                    <runOrder>alphabetical</runOrder>
+                    <!-- Fixes a bug which will be solved in next version after 2.22.1 then this can be removed -->
+                    <!-- see: https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <reportsDirectory>${unitTestReportDirectory}</reportsDirectory>
+                    <skipTests>${skipUnitTests}</skipTests>
+                    <!-- Disable spring cloud k8s in unit test -->
+                    <systemPropertyVariables>
+                        <spring.cloud.kubernetes.enabled>false</spring.cloud.kubernetes.enabled>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+
+            <!-- Configure integration tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${mavenFailsafePluginVersion}</version>
+                <configuration>
+                    <!-- Due to spring-boot repackage, without adding this property test classes are not found
+                         See https://github.com/spring-projects/spring-boot/issues/6254 -->
+                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                    <!-- Force alphabetical order to have a reproducible build -->
+                    <runOrder>alphabetical</runOrder>
+                    <reportsDirectory>${integrationTestReportDirectory}</reportsDirectory>
+                    <includes>
+                        <include>**/*IT*</include>
+                        <include>**/*IntTest*</include>
+                        <include>**/*CucumberIT*</include>
+                    </includes>
+                    <skipTests>${skipIntegrationTests}</skipTests>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
