Configure rate limit expiration duration

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -26,4 +26,5 @@ application:
     password: password
   rate-limit:
     requestCount: 2
-    durationInSeconds: 1
+    durationInSeconds: 30
+    expirationInSeconds: 60
