--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,6 +24,9 @@ application:
     servers:
       - redis://localhost:6379
     password: password
+    timeToLiveInMinutes: 60
+    maxIdleTimeInMinutes: 1
+    cachePrefix: forecast
   rate-limit:
     requestCount: 2
     durationInSeconds: 30
